...
    <ImageView
        android:layout_width="@dimen/toolbar_item_margin"
        android:layout_height="@dimen/toolbar_item_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/toolbar_primary_icon"
        android:src="@drawable/ic_arrow_back_grey_24dp"
        android:contentDescription="@string/image" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/toolbar_primary_icon"
        app:layout_constraintRight_toLeftOf="@id/toolbar_secondary_icon"
        app:layout_constraintHorizontal_bias="0"
        android:id="@+id/tool_bar_title"
        android:textColor="@color/default_grey"
        android:layout_marginStart="@dimen/toolbar_title_margin"
        android:layout_marginEnd="@dimen/default_view_margin"
        android:gravity="center_vertical"
        android:textSize="@dimen/page_title_size"
        android:maxLines="1"
...
