...
        <ImageView
            android:layout_width="@dimen/toolbar_item_margin"
            android:layout_height="@dimen/toolbar_item_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/action_exit_multiselect_state"
            android:src="@drawable/ic_close_grey_24dp"
            android:contentDescription="@string/image" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
